# ZXSpectrum

./: .gitattributes  .gitignore  404.html  CNAME  FirstApp.z80  J.f3s0q1j80gavaScript.js.br  README.md  ZXBox.Blazor.styles.css  ZXBox.Blazor.styles.css.br  ZXBox.sln  audioInterop.js  audioInterop.js.br  favicon.ico.br  index.html  index.html.br  zxAudioProcessor.js  zxAudioProcessor.js.br
Roms/: CURRAH.ROM  ManicMiner.z80.json.br
ZXBox.Benchmarks/: AudioBenchmarks.cs  BenchmarkAssetPaths.cs  BenchmarkBase.cs  Program.cs  SnapshotLoadBenchmarks.cs  SpectrumFrameBenchmarks.cs  ZXBox.Benchmarks.csproj
ZXBox.Blazor.Perf.Tests/: BlazorPerfResult.cs  BlazorPerfTests.cs  MSTestSettings.cs  PerfTestHost.cs  ZXBox.Blazor.Perf.Tests.csproj
ZXBox.Core/: Gameboy.cs  RomEnum.cs  ZXBox.Core.csproj  ZxSpectrum.cs  binary.cs
ZXBox.Core.Tests/: Ay38912ChipTests.cs  CoreTest.cs  CurrahMicroSpeechTests.cs  Sp0256ChipTests.cs  TapeQuickLoadTests.cs  TestState.cs  TestfileHandler.cs  UnitTests.cs  ZXBox.Core.Tests.csproj  ZxPrinterTests.cs  ZxSpectrumAyIntegrationTests.cs
ZXBox.Core.Tests/Testfiles/: 00.in  00.out  01.in  01.out  02.in  02.out  03.in  03.out  04.in  04.out  05.in  05.out  06.in  06.out  07.in  07.out  08.in  08.out  09.in  09.out  0a.in  0a.out  0b.in  0b.out  0c.in  0c.out  0d.in  0d.out  0e.in  0e.out  0f.in  0f.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  (+2576 more)
ZXBox.Meadow/: MeadowApp.cs  Program.cs  ZXBox.Meadow.csproj  ZxSpectrum.cs
_framework/: Microsoft.AspNetCore.Components.6zoa9o5w31.wasm  Microsoft.AspNetCore.Components.Web.wasm  (+282 more)
(+70 files in other folders)
